<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.esa.buildingprimaryandsecondaryappnavigation.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.esa.buildingprimaryandsecondaryappnavigation.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_football"
        android:name="com.esa.buildingprimaryandsecondaryappnavigation.FootballFragment"
        android:label="@string/football"
        tools:layout="@layout/fragment_football" />

    <fragment
        android:id="@+id/nav_basketball"
        android:name="com.esa.buildingprimaryandsecondaryappnavigation.BasketballFragment"
        android:label="@string/basketball"
        tools:layout="@layout/fragment_basketball" />

    <fragment
        android:id="@+id/nav_hockey"
        android:name="com.esa.buildingprimaryandsecondaryappnavigation.HockeyFragment"
        android:label="@string/hockey"
        tools:layout="@layout/fragment_hockey" />

    <fragment
        android:id="@+id/nav_sports"
        android:name="com.esa.buildingprimaryandsecondaryappnavigation.SportsFragment"
        android:label="@string/sports_fragment"
        tools:layout="@layout/fragment_sports" >

        <action
            android:id="@+id/nav_sports_to_football"
            app:destination="@id/nav_football"
            app:popUpTo="@id/nav_sports" />

        <action
            android:id="@+id/nav_sports_to_basketball"
            app:destination="@id/nav_basketball"
            app:popUpTo="@id/nav_sports" />

        <action
            android:id="@+id/nav_sports_to_hockey"
            app:destination="@id/nav_hockey"
            app:popUpTo="@id/nav_sports" />

    </fragment>

</navigation>